--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,31 +7,53 @@
   <title>Fund My Project!</title>
   <link rel="stylesheet" href="/css/jass.css">
   <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+
 </head>
 
 <body>
   <div class="flex-column justify-space-around">
     <header class="display-flex justify-space-between align-center p-2">
-      <h1>
-        <span role="img" aria-label="money">💸</span>
-        <a href="/">Fund My Project!</a>
+      <h1 class="title is-1">
+        LUX 
       </h1>
       <nav>
-        <!-- Conditionally render login or logout links -->
-        {{#if logged_in}}
-        <a href="/profile">profile</a> |
-        <button class="no-button" id="logout">logout</button>
-        {{else}}
-        <a href="/login">login</a>
-        {{/if}}
+        <ul class="navbar">
+          <li class="navbar-item">
+            <a>
+              Rent A Luxury Vehicle
+            </a>
+          </li>
+          <li class="navbar-item">
+            <a>
+              Login
+            </a>
+          </li>
+          <li class="navbar-item">
+            <a>
+              Register
+            </a>
+          </li>
+          <li class="navbar-item">
+            <a>
+              Contact
+            </a>
+          </li>
+
+
+        </ul>
       </nav>
     </header>
     <main class="container container-fluid mt-5">
       <!-- Render the sub layout -->
       {{{ body }}}
     </main>
-    <footer>
-      
+    <footer class="footer">
+      <div class="content has-text-centered">
+        <p>
+            <strong>LUX @copy; ALL RIGHT RESERVED</strong> 
+        </p>
+      </div>
     </footer>
   </div>
 
