--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,7 +1,9 @@
 <div class="row">
   <div class="col-md-6">
     <h2>Login</h2>
-
+    <div id="logged-in-link" style="display: none;">
+      <a href="/">You are now logged in. Click here to go home.</a>
+    </div>
     <form class="form login-form">
       <div class="form-group">
         <label for="email-login">email:</label>
@@ -32,6 +34,30 @@
         <label for="password-signup">password:</label>
         <input class="form-input" type="password" id="password-signup" />
       </div>
+      <div class="form-group">
+        <label for="phone-signup">phone:</label>
+        <input class="form-input" type="number" id="phone-signup" />
+      </div>
+      <div class="form-group">
+        <label for="address-signup">address:</label>
+        <input class="form-input" type="text" id="address-signup" />
+      </div>
+
+      <div class="form-group">
+        <label for="age-signup">age:</label>
+        <input class="form-input" type="number" id="age-signup" />
+      </div>
+
+      <div class="form-group">
+        <label for="license-signup">license:</label>
+        <input class="form-input" type="text" id="license-signup" />
+      </div>
+
+      <div class="form-group">
+        <label for="insurance-signup">insurance:</label>
+        <input class="form-input" type="text" id="insurance-signup" />
+      </div>
+
       <div class="form-group">
         <button class="btn btn-primary" type="submit">signup</button>
       </div>
