cleaned card selection on UI with year make model and book now

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -35,53 +35,52 @@
 
 <body>
   <div class="container">
-    <!-- Content here -->
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
-
-<div class="container">
-</div>
-
-<div class="container">
-  <button class="button">Price per Year</button>
-  <button class="button">Year</button>
-  <button class="button">Distance</button>
-  <button class="button">Advanced Filter</button>
-  <button class="button">Clear</button>
-</div>
-
-<div class="card">
-  <div class="card-image">
-    <figure class="image is-4by3">
-      <img src="https://versions.bulma.io/0.7.0/images/placeholders/1280x960.png" alt="Placeholder image">
-    </figure>
-  </div>
-  <div class="card-content">
-    <div class="media">
-      <div class="media-left">
-        <figure class="image is-48x48">
-          <img src="https://versions.bulma.io/0.7.0/images/placeholders/96x96.png" alt="Placeholder image">
-        </figure>
+    <input class="input" type="text" placeholder="Make" button= "search"> 
+    <button class="button">Search</button>
+  <div class="card col-md-4">
+    <header class="card-header">
+      <p class="card-header-title">
+        Component
+      </p>
+      <a href="#" class="card-header-icon" aria-label="more options">
+        <span class="icon">
+          <i class="fas fa-angle-down" aria-hidden="true"></i>
+        </span>
+      </a>
+    </header>
+    <div class="card-content" style='display:flex; justify-content:space-between; flex-wrap:wrap'>
+      <div class="content" style="width:48%">
+        Coming soon
+        <a href="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/2021-maserati-ghibli-trofeo-104-1613509378.jpg?crop=0.814xw:1.00xh;0.0946xw,0&amp;resize=640:*" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/2021-maserati-ghibli-trofeo-104-1613509378.jpg?crop=0.814xw:1.00xh;0.0946xw,0&amp;resize=640:*">Car Pic needs to render</a>. <a href="#"></a> <a href="#"></a>
+        <img width='i00%' src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/2021-maserati-ghibli-trofeo-104-1613509378.jpg?crop=0.814xw:1.00xh;0.0946xw,0&amp;resize=640:*">
+        <br>
+        {{!-- <time datetime="2016-1-1">11:09 PM - 1 Jan 2016</time> --}}
+        <footer class="card-footer">
+          <a href="#" class="card-footer-item">Make</a>
+          <a href="#" class="card-footer-item">Model</a>
+          <a href="#" class="card-footer-item">Price</a>
+          <a href="#" class="card-footer-item">Book Now</a>
+        </footer>
       </div>
-      <div class="media-content">
-        <p class="title is-4">John Smith</p>
-        <p class="subtitle is-6">@johnsmith</p>
+      <div class="content" style="width:48%">
+        Coming soon
+        <a href="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/2021-maserati-ghibli-trofeo-104-1613509378.jpg?crop=0.814xw:1.00xh;0.0946xw,0&amp;resize=640:*"
+          src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/2021-maserati-ghibli-trofeo-104-1613509378.jpg?crop=0.814xw:1.00xh;0.0946xw,0&amp;resize=640:*">Car
+          Pic needs to render</a>. <a href="#"></a> <a href="#"></a>
+        <img width='100%'
+          src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/2021-maserati-ghibli-trofeo-104-1613509378.jpg?crop=0.814xw:1.00xh;0.0946xw,0&amp;resize=640:*">
+        <br>
+        <footer class="card-footer">
+          <a href="#" class="card-footer-item">Make</a>
+          <a href="#" class="card-footer-item">Model</a>
+          <a href="#" class="card-footer-item">Price</a>
+          <a href="#" class="card-footer-item">Book Now</a>
+        </footer>
+        {{!-- <time datetime="2016-1-1">11:09 PM - 1 Jan 2016</time> --}}
       </div>
     </div>
-    <div class="content">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.
-      <a href="#">@bulmaio</a>. <a href="#">#css</a> <a href="#">#responsive</a>
-      <br>
-      <time datetime="2016-1-1">11:09 PM - 1 Jan 2016</time>
-    </div>
+   
   </div>
-  <footer class="card-footer">
-    <a href="#" class="card-footer-item">Save</a>
-    <a href="#" class="card-footer-item">Edit</a>
-    <a href="#" class="card-footer-item">Delete</a>
-  </footer>
 </div>
   </div>
 </div>
@@ -107,62 +106,13 @@
 </div>
 <div class="row">
   <div class="col">
-   <ifame>
-<div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.
-    </p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
-  </div>
-  <div class="card" style="width: 18rem;">
-    <img src="..." class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.
-      </p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
-    </div>
-  </div><div class="card" style="width: 18rem;">
-    <img src="..." class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.
-      </p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
-    </div>
+    
   </div>
 </div>
    </ifame>
   </div>
   <div class="col">
-    <ifame>
-    <div class="card" style="width: 18rem;">
-      <img src="..." class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.
-        </p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
-      <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.
-          </p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-      </div>
-      <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.
-          </p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
+  
       </div>
     </div>
     </ifame>
