hompage and sigin handlbars

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,17 +15,18 @@
     <div class="flex-column justify-space-around">
       <header class="display-flex justify-space-between align-center p-2">
         <h1>
-          <span role="img" aria-label="money">&#128663</span>
-          <a href="/">LUX Rentals</a>
+          <span class="title is-1" role="img" aria-label="money">&#128663</span>
+          <a class="title is-1" href="/">LUX Rentals</a>
         </h1>
-        <nav>
+        <nav class="navbar">
           <!-- Conditionally render login or logout links -->
           {{#if logged_in}}
-            <a href="/">User logged-in</a>
+            <a class="navbar-item" href="/">User logged-in</a>
             |
             <button class="no-button" id="logout">logout</button>
           {{else}}
-            <a href="/login">login</a>
+            <a class="navbar-item" href="/signin">Sign up</a>
+            <a class="navbar-item" href="/login">login</a>
           {{/if}}
         </nav>
       </header>
