--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -37,7 +37,7 @@
   <div class="container">
     <!-- Content here -->
       <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <input class="input" type="search" placeholder="Type a Make" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
 
@@ -45,14 +45,67 @@
 </div>
 
 <div class="container">
-  <button class="button">Price per Year</button>
+  <button class="button">Price per Day</button>
   <button class="button">Year</button>
   <button class="button">Distance</button>
   <button class="button">Advanced Filter</button>
   <button class="button">Clear</button>
 </div>
 
-<div class="card">
+
+
+
+{{!-- MB: ADDED THIS JUST TO PASS DATA; NO STYLING CONSIDERED FOR THIS --}}
+{{!-- <div>
+  <h1>Luxury Cars: All cars</h1>
+  {{#each cars}}
+    <a href="/car/{{id}}">
+      <p>{{year}}</p>
+<p>{{make}}</p>
+<p>{{model}}</p>
+<p>{{price}}</p>
+    </a>
+    <p>{{description}}</p>
+  {{/each}}
+</div> --}}
+
+
+
+{{#each cars}}
+<div class="box">
+  {{!-- Dyamically render the cars--}}
+  {{!-- <div class="columns"> --}}
+    {{!-- <div class="column"> --}}
+            <div class="card">
+      <div class="card-image">
+        <figure class="image is-4by3">
+          <img src="https://versions.bulma.io/0.7.0/images/placeholders/1280x960.png" alt="Placeholder image">
+        </figure>
+      </div>
+      <div class="card-content">
+        <div class="media">
+          <div class="media-left">
+            {{!-- <figure class="image is-48x48">
+              <img src="https://versions.bulma.io/0.7.0/images/placeholders/96x96.png" alt="Placeholder image">
+            </figure> --}}
+          </div>
+          <div class="media-content">
+            <p class="title is-4">{{year}} {{make}}</p>
+            <p class="subtitle is-6">{{model}} {{type}}</p>
+          </div>
+        </div>
+      </div>
+      <footer class="card-footer">
+        <a class="card-footer-item">Price per day: ${{price}}</a>
+        <a href="#" class="card-footer-item">Book Now</a>
+      </footer>
+    </div>
+        </div>
+   {{/each}}
+
+      
+    {{!-- <div class="column">
+          <div class="card">
   <div class="card-image">
     <figure class="image is-4by3">
       <img src="https://versions.bulma.io/0.7.0/images/placeholders/1280x960.png" alt="Placeholder image">
@@ -78,34 +131,25 @@
     </div>
   </div>
   <footer class="card-footer">
-    <a href="#" class="card-footer-item">Save</a>
-    <a href="#" class="card-footer-item">Edit</a>
-    <a href="#" class="card-footer-item">Delete</a>
+    <a class="card-footer-item">{{make}}</a>
+    <a class="card-footer-item">{{model}}</a>
+    <a class="card-footer-item">Price per Day: {{Price}}</a>
+    <a href="#" class="card-footer-item">Book Now</a>
   </footer>
 </div>
-  </div>
+    </div> --}}
+
+  
+   
+  {{!-- </div> --}}
+  {{!-- Ending columns --}}
+
+
 </div>
-
-{{!-- MB: ADDED THIS JUST TO PASS DATA; NO STYLING CONSIDERED FOR THIS --}}
-<div>
-  <h1>Luxury Cars: All cars</h1>
-  {{#each cars}}
-    <a href="/car/{{id}}">
-      <p>{{year}}</p>
-<p>{{make}}</p>
-<p>{{model}}</p>
-<p>{{price}}</p>
-    </a>
-    <p>{{description}}</p>
-  {{/each}}
-</div>
+{{!-- Ending  box --}}
 
 
-
-<div class="box">
-  {{!-- Dyamically render the cars--}}
-</div>
-<div class="row">
+{{!-- <div class="row">
   <div class="col">
    <ifame>
 <div class="card" style="width: 18rem;">
@@ -168,7 +212,7 @@
     </ifame>
     
   </div>
-  </div>
+  </div> --}}
 
 
 
