worked on reservation form; tested; sucessfully saved and returns an alert. Pending: passing car_id to form

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,9 +23,14 @@
           <!-- Conditionally render login or logout links -->
           {{#if logged_in}}
             {{! <a href="/">User logged-in</a> }}
+            {{! MB: TESTING RESERVATION LINK ONCE LOGGED IN/NEEDS TO BE ADJUSTED ONCE "BOOK" BUTTON CREATED }}
+            {{! <a href="/reservation">Once logged-in:Book</a> }}
             |
             <button class="no-button" id="logout">Logout</button>
           {{else}}
+            {{! MB: TESTING RESERVATION LINK BEFORE LOGGED IN/NEEDS TO BE ADJUSTED ONCE "BOOK" BUTTON CREATED}}
+            {{! <a href="/reservation">Before Log-In:Book</a> }}
+            |
             <a href="/login">Login/Sign-up</a>
           {{/if}}
         </nav>
