adjusted styling and content of readme file. updated homepage.handlebars

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -45,11 +45,9 @@
 </div>
 
 <div class="container">
-  <button class="button">Price per Day</button>
-  <button class="button">Year</button>
-  <button class="button">Distance</button>
-  <button class="button">Advanced Filter</button>
-  <button class="button">Clear</button>
+  <button class="button">Price Per Day</button>
+  <button class="button">Make</button>
+  <button class="button">Model</button>
 </div>
 
 
