--- a/views/reservation.handlebars
+++ b/views/reservation.handlebars
@@ -90,9 +90,9 @@
       </div>
 
 {{!-- MARTIN TESTING car_id here --}}
- {{!-- <div class="form-group">
-   <p>Car ID: {{car.id}}</p>
-      </div> --}}
+ <div class="form-group">
+   <p>Car ID: {{carid}}</p>
+      </div>
 
 
       <div class="form-group">
@@ -136,4 +136,4 @@
   {{/if}}
 </div> --}}
 
-<script src="./js/reservation.js"></script>
+<script src="/js/reservation.js"></script>
