--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -1,4 +1,4 @@
-  <body>
+{{! <body>
   <div class="container">
     <div class="box">
 
@@ -25,4 +25,4 @@
     </div>
   </div>
 </div>
-  </body>
+  </body> }}
