Name and email autopopulate in reservation form; tested; reservation submit works

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -53,7 +53,9 @@
 </div>
 
 
-
+{{!-- MB: ADDED THIS JUST TO PASS DATA; NO STYLING CONSIDERED FOR THIS --}}
+{{!-- <div>
+  <h1>Luxury Cars: All cars</h1>
 
 {{!-- MB: ADDED THIS JUST TO PASS DATA; NO STYLING CONSIDERED FOR THIS --}}
 {{!-- <div>
@@ -97,7 +99,7 @@
       </div>
       <footer class="card-footer">
         <a class="card-footer-item">Price per day: ${{price}}</a>
-        <a href="/reservation" class="card-footer-item">Book Now</a>
+       <a href="/reservation/{{id}}" class="card-footer-item">Book Now</a>
       </footer>
     </div>
         </div>
