--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,38 +1,56 @@
 <div class="row">
   <div class="col-md-6">
-    <h2>Login</h2>
+    <h2>Log In required to book a Lux car</h2>
     {{! <div id="logged-in-link" style="display: none;">
       <a href="/">You are now logged in. Click here to go home.</a>
     </div> }}
     <form class="form login-form">
       <div class="form-group">
-        <label for="email-login">email:</label>
+        <label for="email-login">Email:</label>
         <input class="form-input" type="text" id="email-login" />
       </div>
       <div class="form-group">
-        <label for="password-login">password:</label>
+        <label for="password-login">Password:</label>
         <input class="form-input" type="password" id="password-login" />
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">login</button>
+        <button class="btn btn-primary" type="submit">Login</button>
       </div>
     </form>
   </div>
   <div class="col-md-6">
-    <h2>Signup</h2>
+    <br />
+    <br />
+    <br />
+    <h2>OR Register with us</h2>
 
     <form class="form signup-form">
       <div class="form-group">
-        <label for="name-signup">name:</label>
-        <input class="form-input" type="text" id="name-signup" />
+        <label for="name-signup">Name as it appears in your driver's license:</label>
+        <input
+          class="form-input"
+          type="text"
+          id="name-signup"
+          placeholder="Ex. John Smith"
+        />
       </div>
       <div class="form-group">
-        <label for="email-signup">email:</label>
-        <input class="form-input" type="text" id="email-signup" />
+        <label for="email-signup">Email:</label>
+        <input
+          class="form-input"
+          type="text"
+          id="email-signup"
+          placeholder="Ex. name@me.com"
+        />
       </div>
       <div class="form-group">
-        <label for="password-signup">password:</label>
-        <input class="form-input" type="password" id="password-signup" />
+        <label for="password-signup">Password:</label>
+        <input
+          class="form-input"
+          type="password"
+          id="password-signup"
+          placeholder="write your unique password"
+        />
       </div>
       {{!       
       <div class="form-group">
