added styling to homepage. added css. modified login handlebars. added images and paths to seeds

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,7 @@
-<div class="row">
-  <div class="col-md-6">
-    <h2>Log In required to book a Lux car</h2>
+<div class="columns">
+  <div class="column">
+    <h2>Log In</h2>
+    <h4>to reserve your next vehicle</h4>
     {{! <div id="logged-in-link" style="display: none;">
       <a href="/">You are now logged in. Click here to go home.</a>
     </div> }}
@@ -18,11 +19,13 @@
       </div>
     </form>
   </div>
-  <div class="col-md-6">
+
+  <div class="column">
+    {{!-- <br />
     <br />
-    <br />
-    <br />
-    <h2>OR Register with us</h2>
+    <br /> --}}
+    <h2>New to Lux?</h2>
+    <h4>register below</h4>
 
     <form class="form signup-form">
       <div class="form-group">
@@ -78,7 +81,7 @@
       </div> }}
 
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">signup</button>
+        <button class="btn btn-primary" type="submit">Sign Up</button>
       </div>
     </form>
   </div>
