--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,180 +1,180 @@
-<!-- Loop over each object in the projects array -->
-{{!-- {{#each projects as |project| }}
-<div class="row mb-4 project">
-  <div class="col-md-5">
-    <h2>
-      <!-- Call helper function with triple brackets to render the emoji span as HTML -->
-      {{{get_emoji}}}
-      <a href="/project/{{project.id}}">{{project.name}}</a>
-    </h2>
-    <p>
-      <span for="img" aria-label="money">💲</span>
-      <!-- Pass needed_funding value to the helper function -->
-      <span class="dollar-amount">{{format_amount project.needed_funding}}</span>
-      needed!
-    </p>
-    <p>Created by {{project.user.name}} on {{format_date project.date_created}}</p>
-  </div>
-  <div class="col-md-7">
-    <p>
-      {{project.description}}
-    </p>
-  </div>
-</div>
-{{/each}} --}}
-
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> Lux </title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+  <title>LUX</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.13.0/css/all.min.css">
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
 <body>
-  <div class="container">
-    <!-- Content here -->
-      <form class="d-flex">
-        <input class="input" type="search" placeholder="Type a Make" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
 
-<div class="container">
-</div>
-
-<div class="container">
-  <button class="button">Price Per Day</button>
-  <button class="button">Make</button>
-  <button class="button">Model</button>
-</div>
-
-
-{{!-- MB: ADDED THIS JUST TO PASS DATA; NO STYLING CONSIDERED FOR THIS --}}
-{{!-- <div>
-  <h1>Luxury Cars: All cars</h1>
-
-{{!-- MB: ADDED THIS JUST TO PASS DATA; NO STYLING CONSIDERED FOR THIS --}}
-{{!-- <div>
-  <h1>Luxury Cars: All cars</h1>
-  {{#each cars}}
-    <a href="/car/{{id}}">
-      <p>{{year}}</p>
-<p>{{make}}</p>
-<p>{{model}}</p>
-<p>{{price}}</p>
-    </a>
-    <p>{{description}}</p>
-  {{/each}}
-</div> --}}
-
-
-
-{{#each cars}}
-<div class="box">
-  {{!-- Dyamically render the cars--}}
-  {{!-- <div class="columns"> --}}
-    {{!-- <div class="column"> --}}
-            <div class="card">
-      <div class="card-image">
-        <figure class="image is-4by3">
-          <img src="https://versions.bulma.io/0.7.0/images/placeholders/1280x960.png" alt="Placeholder image">
-        </figure>
-      </div>
-      <div class="card-content">
-        <div class="media">
-          <div class="media-left">
-            {{!-- <figure class="image is-48x48">
-              <img src="https://versions.bulma.io/0.7.0/images/placeholders/96x96.png" alt="Placeholder image">
-            </figure> --}}
+  <section class="hero is-fullheight is-light">
+    <div class="hero-head">
+      <nav class="navbar is-transparent is-spaced" role="navigation" aria-label="main navigation">
+        <div class="container">
+          <div class="navbar-brand">
+            <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
+              data-target="navbarTopMain">
+            </a>
           </div>
-          <div class="media-content">
-            <p class="title is-4">{{year}} {{make}}</p>
-            <p class="subtitle is-6">{{model}} {{type}}</p>
+          <div class="navbar-menu" id="navbarTopMain">
+            <div class="navbar-end">
+              <div class="navbar-item">
+              </div>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </div>
+    <div class="hero-body  p-b-30 ">
+      <div class="container">
+        <h2 class="subtitle">
+          <span class="has-text-centered is-block">
+            Search hundreds of convertibles, coupes and SUVs for rent.
+          </span>
+        </h2>
+        <h1 class="title">
+          <span class="is-size-2 has-text-centered is-block">What are you waiting for?</span>
+        </h1>
+        <div class="columns is-centered">
+          <div class="column is-7">
+            <div class="search-form">
+              <form>
+                <div class="field has-addons has-shadow-field">
+                  <div class="control has-icons-left is-expanded">
+                    <input type="text" id="mainSearch" defaultvalue="" placeholder="Search rentals by make..."
+                      class="input is-medium">
+                  </div>
+                  <div class="control">
+                    <button type="button" class="button is-medium is-primary has-background-black">
+                      <span class="has-text-weight-semibold">Search</span>
+                    </button>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+  </section>
+
+  <section class="hero is-medium">
+    <div class="hero-body">
+      <div class="container">
+        <div class="columns is-centered">
+          <div class="column is-8">
+            <div class="sub-section">
+              <h3 class="title is-size-4">Car Gallery</h3>
+              <h4 class="subtitle is-size-6">We've got 'em all.</h4>
+
+              {{#each cars}}
+              <div class="column">
+                <div class="card rb-card">
+                  <div class="card-image">
+                    <figure class="columns is-9by6">
+                      <img
+                        src="https://i.guim.co.uk/img/media/88912d57451780d0208d5b8da977d69c0e67349d/513_1013_4787_2873/master/4787.jpg?width=620&quality=85&auto=format&fit=max&s=067feab43f3a77d70f5300454e555826"
+                        alt="car">
+                    </figure>
+                  </div>
+                  <div class="card-content">
+                    <div class="media">
+                      <div class="media-left">
+                      </div>
+                      <div class="media-content">
+                        <p class="title is-4">{{year}} {{make}}</p>
+                        <p class="subtitle is-6">{{model}} {{type}}</p>
+                      </div>
+                    </div>
+                  </div>
+                  <footer class="card-footer">
+                    <a class="card-footer-item">Price per day: ${{price}}</a>
+                    <a href="/reservation/{{id}}" class="card-footer-item">Book Now</a>
+                  </footer>
+                </div>
+              </div>
+              
+              {{/each}}
+  </section>
+
+  <section>
+    <div class="container">
+      <div class="columns is-centered">
+        <div class="sub-section">
+          <h3 class="title is-size-6">Browse By Most Popular</h3>
+          <div class="columns">
+            <div class="column">
+              <div class="card rb-card">
+                <div class="card-image">
+                  <figure class="columns is-3">
+                    <img src="https://via.placeholder.com/640x360" alt="car">
+                  </figure>
+                </div>
+                <div class="card-content">
+                  <h3 class="title is-size-7">
+                    <a href="#">
+                      Aston Martin
+                    </a>
+                  </h3>
+                </div>
+              </div>
+            </div>
+            <div class="column">
+              <div class="card rb-card">
+                <div class="card-image">
+                  <figure class="columns is-3">
+                    <img src="https://via.placeholder.com/640x360" alt="car">
+                  </figure>
+                </div>
+                <div class="card-content">
+                  <h3 class="title is-size-7">
+                    <a href="#">
+                      Bentley
+                    </a>
+                  </h3>
+                </div>
+              </div>
+            </div>
+            <div class="column">
+              <div class="card rb-card">
+                <div class="card-image">
+                  <figure class="columns is-3">
+                    <img src="https://via.placeholder.com/640x360" alt="car">
+                  </figure>
+                </div>
+                <div class="card-content">
+                  <h3 class="title is-size-7">
+                    <a href="#">
+                      Lamborghini
+                    </a>
+                  </h3>
+                </div>
+              </div>
+            </div>
+
           </div>
         </div>
       </div>
-      <footer class="card-footer">
-        <a class="card-footer-item">Price per day: ${{price}}</a>
-       <a href="/reservation/{{id}}" class="card-footer-item">Book Now</a>
-      </footer>
     </div>
+    </div>
+    </div>
+  </section>
+  <section class="hero is-medium is-light">
+    <div class="hero-body p-b-30">
+      <div class="container">
+        <div class="has-text-centered">
+          <!-- <h2 class="subtitle">
+						TAKE A DRIVE
+					</h2> -->
+          <h1 class="title">What are you waiting for?</h1>
         </div>
-   {{/each}}
-
-      
-    {{!-- <div class="column">
-          <div class="card">
-  <div class="card-image">
-    <figure class="image is-4by3">
-      <img src="https://versions.bulma.io/0.7.0/images/placeholders/1280x960.png" alt="Placeholder image">
-    </figure>
-  </div>
-  <div class="card-content">
-    <div class="media">
-      <div class="media-left">
-        <figure class="image is-48x48">
-          <img src="https://versions.bulma.io/0.7.0/images/placeholders/96x96.png" alt="Placeholder image">
-        </figure>
-      </div>
-      <div class="content" style="width:48%">
-        Coming soon
-        <a href="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/2021-maserati-ghibli-trofeo-104-1613509378.jpg?crop=0.814xw:1.00xh;0.0946xw,0&amp;resize=640:*"
-          src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/2021-maserati-ghibli-trofeo-104-1613509378.jpg?crop=0.814xw:1.00xh;0.0946xw,0&amp;resize=640:*">Car
-          Pic needs to render</a>. <a href="#"></a> <a href="#"></a>
-        <img width='100%'
-          src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/2021-maserati-ghibli-trofeo-104-1613509378.jpg?crop=0.814xw:1.00xh;0.0946xw,0&amp;resize=640:*">
-        <br>
-        <footer class="card-footer">
-          <a href="#" class="card-footer-item">Make</a>
-          <a href="#" class="card-footer-item">Model</a>
-          <a href="#" class="card-footer-item">Price</a>
-          <a href="#" class="card-footer-item">Book Now</a>
-        </footer>
-        {{!-- <time datetime="2016-1-1">11:09 PM - 1 Jan 2016</time> --}}
       </div>
     </div>
-   
-  </div>
-  <footer class="card-footer">
-    <a class="card-footer-item">{{make}}</a>
-    <a class="card-footer-item">{{model}}</a>
-    <a class="card-footer-item">Price per Day: {{Price}}</a>
-    <a href="#" class="card-footer-item">Book Now</a>
-  </footer>
-</div>
-    </div> --}}
-
-  
-   
-  {{!-- </div> --}}
-  {{!-- Ending columns --}}
-
-
-</div>
-{{!-- Ending  box --}}
-
-
-{{!-- <div class="row">
-  <div class="col">
-    
-  </div>
-</div>
-   </ifame>
-  </div>
-  <div class="col">
-  
-      </div>
-    </div>
-    </ifame>
-    
-  </div>
-  </div> --}}
-
-
-
-
+  </section>
 
 
   <!-- Include Handlebars from a CDN -->
