added image routes to handlebars, car.js, and car-seeds file. car images now render for each card

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -76,9 +76,9 @@
                 <div class="card rb-card">
                   <div class="card-image">
                     <figure class="columns is-9by6">
-                      <img
-                        src="https://i.guim.co.uk/img/media/88912d57451780d0208d5b8da977d69c0e67349d/513_1013_4787_2873/master/4787.jpg?width=620&quality=85&auto=format&fit=max&s=067feab43f3a77d70f5300454e555826"
-                        alt="car">
+                      <img class="image" src={{image}} />
+                        {{!-- src="https://i.guim.co.uk/img/media/88912d57451780d0208d5b8da977d69c0e67349d/513_1013_4787_2873/master/4787.jpg?width=620&quality=85&auto=format&fit=max&s=067feab43f3a77d70f5300454e555826"
+                        alt="car"> --}}
                     </figure>
                   </div>
                   <div class="card-content">
