--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -79,7 +79,7 @@
             <div class="card">
       <div class="card-image">
         <figure class="image is-4by3">
-          <img src="https://versions.bulma.io/0.7.0/images/placeholders/1280x960.png" alt="Placeholder image">
+          <img src="{{image}}" alt="Placeholder image">
         </figure>
       </div>
       <div class="card-content">
