--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,40 +1,23 @@
 .sub-section {
-	margin-bottom: 60px;
+	margin-bottom: 20px;
 }
 .rb-card {
 	border: none;
 	border-radius: 2px;
 	box-shadow: 5px 5px 16px 0 rgba(5, 4, 4, 0.13);
-	transition: all 0.3s ease-in-out;
+	transition: all 0.5s ease-in-out;
 	position: relative;
 	overflow: hidden;
 }
 .rb-card a {
-	color: #515f6a;
+	color: #616669;
 }
 .rb-card:hover {
-	transform: scale(1.015);
+	transform: scale(1.020);
 }
-.m-l-5 {
-	margin-left: 5px !important;
-}
-.p-t-30 {
-	padding-top: 30px !important;
-}
+
 .p-b-30 {
-	padding-bottom: 10px !important;
-}
-.m-t-10 {
-	margin-top: 10px !important;
-}
-.m-t-30 {
-	margin-top: 30px !important;
-}
-.m-t-50 {
-	margin-top: 50px !important;
-}
-.m-t-60 {
-	margin-top: 60px !important;
+	padding-bottom: 5px;
 }
 
 h1,
@@ -42,53 +25,19 @@ h2,
 h3,
 h4 {
 	font-family: Montserrat, sans-serif;
-	font-weight: 600;
+	font-weight: 700;
 }
 .title {
-	font-weight: 600;
+	font-weight: 700;
 }
-.field.has-shadow-field {
-	-webkit-box-shadow: 0 5px 30px hsla(224, 8%, 64%, 0.25) !important;
-	box-shadow: 0 5px 30px hsla(224, 8%, 64%, 0.25) !important;
-}
+
 .subtitle {
 	font-family: Helvetica, Arial, sans-serif;
 	font-weight: 500;
 }
 .hero.is-light .subtitle,
 .subtitle {
-	color: #99a6b3;
-}
-.input {
-	box-shadow: none;
-	-webkit-box-shadow: none;
-}
-.input:-webkit-autofill {
-	-webkit-box-shadow: 0 0 0 30px #fff inset;
+	color: #8a9094;
 }
 
-.input:active,
-.input:focus {
-	-webkit-box-shadow: none;
-	box-shadow: none;
-}
-.button {
-	-webkit-transition: all 0.3s ease-out;
-	transition: all 0.3s ease-out;
-	font-family: Montserrat, sans-serif;
-	font-weight: 500;
-}
-.button.is-shadowy {
-	box-shadow: 0 5px 30px hsla(224, 8%, 64%, 0.25);
-	-webkit-box-shadow: 0 5px 30px hsla(224, 8%, 64%, 0.25);
-	-moz-box-shadow: 0 5px 30px hsla(224, 8%, 64%, 0.25);
-}
-.button.is-shadowy:hover {
-	-webkit-box-shadow: 0 16px 43px 2px rgba(0, 0, 0, 0.2);
-	box-shadow: 0 16px 43px 2px rgba(0, 0, 0, 0.2);
-}
-a {
-	-webkit-transition: color 0.3s ease-out;
-	transition: color 0.3s ease-out;
-}
 
